test/sema/typeck/ref/ref-non-variable.dora
fn take_ref(r: ref Int32) {}

fn test() {
    take_ref(ref 42);
}
